[gd_scene load_steps=13 format=2]

[ext_resource path="res://Room.gd" type="Script" id=1]
[ext_resource path="res://Lobby.tscn" type="PackedScene" id=2]
[ext_resource path="res://Command.tscn" type="PackedScene" id=3]
[ext_resource path="res://SelectionPopup.tscn" type="PackedScene" id=4]
[ext_resource path="res://LastCall.tscn" type="PackedScene" id=5]
[ext_resource path="res://RoundEnd.tscn" type="PackedScene" id=6]
[ext_resource path="res://theme/BG.tres" type="Texture" id=7]
[ext_resource path="res://Throttle.tscn" type="PackedScene" id=8]
[ext_resource path="res://LeavePopup.tscn" type="PackedScene" id=9]
[ext_resource path="res://sprites/game_bg.png" type="Texture" id=10]
[ext_resource path="res://sprites/btn_exit.png" type="Texture" id=11]
[ext_resource path="res://Tutorial.tscn" type="PackedScene" id=12]

[node name="Room" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="TextureRect" parent="."]
margin_right = 720.0
margin_bottom = 1280.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lobby" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Game" type="Node2D" parent="."]

[node name="BG_Game" type="TextureRect" parent="Game"]
margin_right = 720.0
margin_bottom = 1280.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Command" parent="Game" instance=ExtResource( 3 )]

[node name="PeopleContainer" type="GridContainer" parent="Game"]
margin_top = 342.0
margin_right = 720.0
margin_bottom = 1278.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionPopup" parent="Game" instance=ExtResource( 4 )]
visible = false
margin_top = 341.548
margin_right = 720.0
margin_bottom = 1277.55

[node name="btn_back" type="TextureButton" parent="Game"]
margin_left = 644.55
margin_top = 16.6799
margin_right = 724.55
margin_bottom = 96.6799
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LastCall" parent="Game" instance=ExtResource( 5 )]

[node name="Throttle" parent="." instance=ExtResource( 8 )]
visible = false

[node name="RoundEnd" parent="." instance=ExtResource( 6 )]
visible = false

[node name="LeavePopup" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Tutorial" parent="." instance=ExtResource( 12 )]
visible = false
